--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"></link>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"></link>
         <link rel="stylesheet" href="/assets/react-bootstrap-table-all.min.css"></link>
+        <link rel="stylesheet" href="/assets/bundle.css"></link>
         <style>
         .rotated-text {
             display: inline-block;
